2-Orchestration/clusters/production/nextcloud/peer-authentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: PeerAuthentication
metadata:
  name: default-nextcloud
  namespace: nextcloud
spec:
  mtls:
    mode: PERMISSIVE
