2-Orchestration/clusters/production/nextcloud/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  gateways:
  - istio-system/public
  hosts:
  - cloud.infra.kellerhome.us
  http:
  - route:
    - destination:
        host: nextcloud-nextcloud.nextcloud.svc.cluster.local
        port:
          number: 8080
